K8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80  
  type: LoadBalancer
