K8s/t2fp-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 9966
    targetPort: 9966
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      hostname: backend
      containers:
      - name: backend
        image: t2fp/backend:latest
        # resources:
        #   limits:
        #     cpu: "2"
        #     memory: "2Gi"
        #   requests:
        #     cpu: "1"
        #     memory: "1Gi"
        ports:
        - containerPort: 9966
