K8s/t2fp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: t2fp-service
spec:
  type: nodePort
  selector:
      app: app
  ports:
  - protocol: TCP
    nodePort: 80
    port: 80
    targetPort: 80
