K8s/t2fp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress-connect"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
   
  labels:
    app: 2048-ingress
spec:
  rules:
    - http:
        paths:
          - path: /petclinic/api/*
            backend:
              serviceName: backend
              servicePort: 9966
          - path: /*
            backend:
              serviceName: frontend
              servicePort: 4200
